Update project with Streamlit app and processed datasets

--- a/notebooks/02_mood_detection_nlp.ipynb
+++ b/notebooks/02_mood_detection_nlp.ipynb
@@ -2,31 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfc7d1f2",
    "metadata": {},
    "source": [
     "# Mood Detection from Journals (NLP)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7f89844e",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Load Journal Entries"
+    "Load Journal Entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-204b75ee61b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata_prep\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclean_journal\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_and_preprocess_journals\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mmood_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_and_preprocess_journals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:/Users/Vanathi//mood-meets-media/data/raw/mood_logs.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from src.data_prep.clean_journal import load_and_preprocess_journals\n",
+    "\n",
+    "mood_df = load_and_preprocess_journals(\"C:/Users/Vanathi//mood-meets-media/data/raw/mood_logs.csv\")\n",
+    "mood_df.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d7a3bac",
    "metadata": {},
    "source": [
     "## Preprocess Text (Tokenization, Lemmatization)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "291ede5f",
    "metadata": {},
    "source": [
     "## Sentiment and Emotion Detection"
@@ -34,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f34425",
    "metadata": {},
    "source": [
     "## Build Mood Classifier (Optional: BERT, DistilBERT)"
@@ -42,14 +73,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014d2146",
    "metadata": {},
    "source": [
     "## Save Features"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
